[tool.poetry]
name = "between-s3-data-share"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
awswrangler = "^2.16.1"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
