[tool.poetry]
name = "between-s3-data-share"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
awswrangler = "^2.16.1"
pandas = "^1.4.4"
black = "^22.8.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.3"
pyproject-flake8 = "^5.0.4"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 119
extend-ignore = E203
exclude = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
